--- a/home/index.html
+++ b/home/index.html
@@ -27,6 +27,7 @@
         <link href="page_modules/header-module.css" rel="stylesheet" type="text/css"/>
 
         <!-- CORE EXT LIBS -->
+        <script src="ext/jquery/jquery-3.5.1.min.js" type="text/javascript"></script>
         <script src="ext/angular/angular-1.7.9/angular.min.js" type="text/javascript"></script>
         <script src="ext/angular/angular-1.7.9/angular-animate.min.js" type="text/javascript"></script>
         <script src="ext/angular/angular-1.7.9/angular-sanitize.min.js" type="text/javascript"></script>
@@ -47,12 +48,12 @@
 
 
     </head>
-    <body data-event-watcher ng-class="orientation">
+    <body ng-class="orientation" ng-controller="RootController">
 
         <!-- MAIN PAGE VIEW -->
         <div data-keyboard-kit></div>
 
-        <div id="modal_parent" class="d-none" ng-controller="ModalController">
+        <div id="modal_parent" class="d-none" ng-controller="DialogController">
             <div id="modal_body">
                 <div class="modal-content">
                     <div class="modal-header">
