--- a/home/index.html
+++ b/home/index.html
@@ -57,12 +57,13 @@
             <div id="modal_body">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">{{modal_title}}</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
+                        <h4 style="text-align: center;">Features</h4>
                         <section class="animate-repeat" ng-repeat="subject in subjects">
                             <h5>{{subject.title}}</h5>
                             <p>{{subject.description}}</p>
