--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-        <meta name="Author" content="KellyCode">
+        
+        <meta name="description" content="Midi enabled piano chords by key, Chord finder, Key finder by keys pressed & Sight reading practice.">
+        <meta name="keywords" content="piano chords by key, piano chord finder, piano key finder, piano student help">
+        <meta name="author" content="Kearnan Kelly & KellyCode">
 
         <link rel="icon" href="./favicon.ico?v=1" type="image/x-icon" />
 
@@ -63,7 +66,6 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h4 style="text-align: center;">Features</h4>
                         <section class="animate-repeat" ng-repeat="subject in subjects">
                             <h5>{{subject.title}}</h5>
                             <p>{{subject.description}}</p>
