--- a/home/page_modules/keyboardkit.main.tpl.html
+++ b/home/page_modules/keyboardkit.main.tpl.html
@@ -7,6 +7,24 @@
         <div id="staffScore" class="">
             <div class="data_score_mod" data-score-module></div>
             <div class="data_staff_mod" data-staff-module></div>
+            <div class="data_options_mod row">
+                <div class="form-check form-check-inline col">
+                    <input type="checkbox" class="form-check-input" ng-model="keepScore" id="keepScoreCheckbox">
+                    <label class="form-check-label" for="keepScoreCheckbox">Keep Score</label>
+                </div>
+                <div class="form-check form-check-inline col">
+                    <input type="checkbox" class="form-check-input" ng-model="breakOnMiddleC" id="breakOnMiddleCCheckbox">
+                    <label class="form-check-label" for="breakOnMiddleCCheckbox">Break on Middle C</label>
+                </div>
+                <div class="form-check form-check-inline col">
+                    <input type="checkbox" class="form-check-input" ng-model="showLineNames" id="showLineNamesCheckbox">
+                    <label class="form-check-label" for="showLineNamesCheckbox">Show Line Names</label>
+                </div>
+                <div class="form-check form-check-inline col">
+                    <input type="checkbox" class="form-check-input" ng-model="useKeySearch" id="keySearchCheckbox">
+                    <label class="form-check-label" for="keySearchCheckbox">Key Search</label>
+                </div>
+            </div>
         </div>
         <div id="chordsMod" class="" data-chords-module></div>
     </div>
