--- a/home/index.html
+++ b/home/index.html
@@ -30,53 +30,30 @@
         <link href="page_modules/header-module.css" rel="stylesheet" type="text/css"/>
 
         <!-- CORE EXT LIBS -->
-        <script src="ext/jquery/jquery-3.5.1.min.js" type="text/javascript"></script>
-        <script src="ext/angular/angular-1.7.9/angular.min.js" type="text/javascript"></script>
-        <script src="ext/angular/angular-1.7.9/angular-animate.min.js" type="text/javascript"></script>
-        <script src="ext/angular/angular-1.7.9/angular-sanitize.min.js" type="text/javascript"></script>
-        <script src="ext/angular/angular-1.7.9/angular-cookies.min.js" type="text/javascript"></script>
+        <script src="ext/jquery/jquery-3.5.1.min.js"></script>
+        <script src="ext/angular/angular-1.7.9/angular.min.js"></script>
+        <script src="ext/angular/angular-1.7.9/angular-animate.min.js"></script>
+        <script src="ext/angular/angular-1.7.9/angular-sanitize.min.js"></script>
+        <script src="ext/angular/angular-1.7.9/angular-cookies.min.js"></script>
 
         <!-- EXT LIBS -->
-        <script src="ext/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-2.5.0.min.js" type="text/javascript"></script>
-        <script src="ext/ui-bootstrap-custom-build/ui-bootstrap-custom-2.5.0.min.js" type="text/javascript"></script>
+        <script src="ext/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-2.5.0.min.js"></script>
+        <script src="ext/ui-bootstrap-custom-build/ui-bootstrap-custom-2.5.0.min.js"></script>
 
         <!-- OUR MODULES -->
-        <script src="js/Module.KeyboardKit.NoteMethods.js" type="text/javascript"></script>
-        <script src="js/Module.KeyboardKit.Directives.js" type="text/javascript"></script>
-        <script src="js/Module.KeyboardKit.NoteData.js" type="text/javascript"></script>
-        <script src="js/Module.KeyboardKit.Main.js" type="text/javascript"></script>
+        <script src="js/Module.KeyboardKit.NoteMethods.js"></script>
+        <script src="js/Module.KeyboardKit.NoteData.js"></script>
+        <script src="js/Module.KeyboardKit.Main.js"></script>
 
         <!-- OUR APP -->
-        <script src="./js/Module.KeyboardKit.App.js" type="text/javascript"></script>
+        <script src="./js/Module.KeyboardKit.App.js"></script>
 
 
     </head>
-    <body ng-class="orientation" ng-controller="RootController">
+    <body ng-controller="RootController">
 
         <!-- MAIN PAGE VIEW -->
         <div data-keyboard-kit></div>
-
-        <div id="modal_parent" class="d-none" ng-controller="DialogController">
-            <div id="modal_body">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">{{modal_title}}</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <section class="animate-repeat" ng-repeat="subject in subjects">
-                            <h5>{{subject.title}}</h5>
-                            <p>{{subject.description}}</p>
-                        </section>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </body>
 </html>
